Fix z-index on navbar

--- a/app/assets/stylesheets/api/nav_bar.scss
+++ b/app/assets/stylesheets/api/nav_bar.scss
@@ -3,7 +3,7 @@
 .nav-bar-wrapper {
   top: 0;
   height: 8%;
-  z-index: 500;
+  z-index: 1000;
   width: 100%;
   display: flex;
   justify-content: space-between;
